--- a/ui/public/style.css
+++ b/ui/public/style.css
@@ -1,3 +1,11 @@
 * {
     font-family: "Roboto", Arial, Helvetica, sans-serif;
 }
+
+html, body {
+  position: fixed;
+  overflow: hidden;
+  width: 100vw;
+  height: 100vh;
+  background-color: black;
+}
